--- a/assets/sass/components/background.scss
+++ b/assets/sass/components/background.scss
@@ -4,6 +4,11 @@
 .Background--grey {
     background-color: $Anti-white-flash;
     color: $Jet-grey;
+    a:not([class]):hover,
+    a:not([class]):active,
+    a:not([class]):focus {
+        color: $Crayola-red-acc2;
+    }
 }
 .Background--brandeis-blue {
     background-color: $Brandeis-blue;
