--- a/assets/sass/components/quote.scss
+++ b/assets/sass/components/quote.scss
@@ -86,6 +86,6 @@
         border: none;
     }
     .Quote-authorrole {
-        color: $Crayola-red;
+        color: $Crayola-red-acc2;
     }
 }
